fix: hide scrollbar auto

--- a/src/app/pages/flash/style.scss
+++ b/src/app/pages/flash/style.scss
@@ -137,7 +137,7 @@
   text-align: left;
   width: 100%;
   max-height: 50vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .flash_resultCell {
