--- a/src/app/pages/lobby/style.scss
+++ b/src/app/pages/lobby/style.scss
@@ -24,7 +24,7 @@
   /* flex: 1 1; */
   max-height: 80vh;
   /* height: 50vh; */
-  overflow: scroll;
+  overflow: auto;
 }
 
 .partiesCount {
