--- a/src/app/pages/waiting/style.scss
+++ b/src/app/pages/waiting/style.scss
@@ -22,7 +22,7 @@
   flex-direction: column;
   margin-top: 10px;
   flex: 1;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .themeLine {
@@ -73,7 +73,7 @@
   width: 49%;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 98vh;
 }
 
