--- a/src/components/pannel/style.scss
+++ b/src/components/pannel/style.scss
@@ -149,5 +149,5 @@
 
 .usersContainerBox {
   max-height: 66vh;
-  overflow: scroll;
+  overflow: auto;
 }
